add: added 3d raiden with animations

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,7 @@ canvas {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: darkviolet;
+  background: darkred;
 }
 
 /* Handle on hover */
